# radar-legislativo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline_semanal.yml
n8n/: email_template.html  prompt_resumo_executivo.txt  queries.sql  workflow_radar_legislativo.json
notebooks/: 01_exploracao_api.py
src/: run_pipeline.py
src/ai/: classify.py  embeddings.py  run_classify.py  themes.py
src/camara_api/: client.py  config.py
src/extract/: extract_deputados.py  extract_despesas.py  extract_partidos.py  extract_proposicoes.py  extract_votacoes.py  raw_storage.py  run_extraction.py
src/radar_legislativo/: __init__.py  cli.py  models.py  radar.py
src/transform/: db.py  load.py  raw_loader.py  run_transform.py  schema.sql  transform_deputados.py  transform_despesas.py  transform_partidos.py  transform_proposicoes.py  transform_votacoes.py  validations.py
tests/: test_radar.py
