[project]
name = "radar-legislativo"
version = "0.1.0"
description = "Radar Legislativo: base Python para monitorar e priorizar proposicoes legislativas."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Yuri" }
]
dependencies = []

[project.scripts]
radar-legislativo = "radar_legislativo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/radar_legislativo"]

